# app/Models/Event.php
@@ -36,15 +36,67 @@ use Spatie\MediaLibrary\MediaCollections\Models\Media;
  * @mixin Builder
  */
 #[OAT\Schema(properties: [
-    new OAT\Property(property: 'id', description: 'id', type: 'int', example: 1),
-    new OAT\Property(property: 'code', description: '代號', type: 'string', example: '20240200001'),
-    new OAT\Property(property: 'name', description: '名稱', type: 'string', example: '發票抽獎'),
-    new OAT\Property(property: 'type', description: '類型', type: 'string', enum: EventType::class,
-        example: EventType::INVOICE),
-    new OAT\Property(property: 'terms', description: '活動條款', type: 'string', example: '活動條款'),
-    new OAT\Property(property: 'privacy', description: '個人資料聲明', type: 'string', example: '個人資料聲明'),
-    new OAT\Property(property: 'started_at', description: '開始時間', type: 'datetime', example: '2024-05-13T17:06:44.000000Z'),
-    new OAT\Property(property: 'ended_at', description: '結束時間', type: 'datetime', example: '2024-05-20T17:06:44.000000Z'),
+    new OAT\Property(
+        property: 'id',
+        description: 'id',
+        type: 'int',
+        example: 1
+    ),
+    new OAT\Property(
+        property: 'code',
+        description: '代號',
+        type: 'string',
+        example: '20240200001'
+    ),
+    new OAT\Property(
+        property: 'name',
+        description: '名稱',
+        type: 'string',
+        example: '發票抽獎'
+    ),
+    new OAT\Property(
+        property: 'type',
+        description: '類型',
+        type: 'string',
+        enum: EventType::class,
+        example: EventType::INVOICE
+    ),
+    new OAT\Property(
+        property: 'terms',
+        description: '活動條款',
+        type: 'string',
+        example: '活動條款'
+    ),
+    new OAT\Property(
+        property: 'privacy',
+        description: '個人資料聲明',
+        type: 'string',
+        example: '個人資料聲明'
+    ),
+    new OAT\Property(
+        property: 'started_at',
+        description: '開始時間',
+        type: 'datetime',
+        example: '2024-05-13T17:06:44.000000Z'
+    ),
+    new OAT\Property(
+        property: 'ended_at',
+        description: '結束時間',
+        type: 'datetime',
+        example: '2024-05-20T17:06:44.000000Z'
+    ),
+    new OAT\Property(
+        property: 'banner',
+        description: 'Banner',
+        type: 'string',
+        example: 'banner.png'
+    ),
+    new OAT\Property(
+        property: 'background',
+        description: '背景圖',
+        type: 'string',
+        example: 'background.png'
+    ),
 ])]
 class Event extends Model implements HasMedia
 {
